--- a/index.html
+++ b/index.html
@@ -9,6 +9,27 @@
 				font-family:dotum;
 				line-height:1.6em;
 			}
+			body.black
+			{
+				background-color:black;
+				color:white;
+			}
+			body.black.a
+			{
+				color:white;
+			}
+			body.black a:hover
+			{
+				color:#f60;
+			}
+			body.black header
+			{
+				border-bottom:1px solid #333;
+			}
+			body.black nav
+			{
+				border-right:1px solid #333;
+			}
 			header
 			{
 				border-bottom:1px solid #ccc;
@@ -17,7 +38,7 @@
 			#toolbar
 			{
 				padding:10px;
-				float:right;
+				float:left;
 			}
 			nav
 			{
@@ -36,7 +57,12 @@
 			{
 				float:left;
 			}
-			a{
+			footer
+			{
+				clear:both;	
+			}
+			a
+			{
 				text-decoration:none;
 			}
 			a:link, a:visited
@@ -60,8 +86,8 @@
 				<h1>JavaScript</h1>
 			</header>
 			<div id="toolbar">
-				<input type="button" value="black" />
-				<input type="button" value="white" />
+ 				<input type="button" value="black" onclick="document.getElementById('body').className='black'" />                
+				<input type="button" value="white" onclick="document.getElementById('body').className='white'" />      
 			</div>
 			<nav>
 				<ul>
